noinst_LIBRARIES = libalgorithm.a

libalgorithm_a_CPPFLAGS = \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/StringGraph \
	-I$(top_srcdir)/SQG \
	-I$(top_srcdir)/SuffixTools \
	-I$(top_srcdir)/Thirdparty \
    -I$(top_srcdir)/Concurrency

libalgorithm_a_SOURCES = \
        OverlapAlgorithm.h OverlapAlgorithm.cpp \
		SearchSeed.h SearchSeed.cpp \
		OverlapBlock.h OverlapBlock.cpp \
		SearchHistory.h SearchHistory.cpp \
        ErrorCorrectProcess.h ErrorCorrectProcess.cpp \
        QCProcess.h QCProcess.cpp \
        OverlapTools.h OverlapTools.cpp \
		DPAlignment.h DPAlignment.cpp \
        ConnectProcess.h ConnectProcess.cpp \
        StringGraphGenerator.h StringGraphGenerator.cpp \
        FMMergeProcess.h FMMergeProcess.cpp \
        StatsProcess.h StatsProcess.cpp \
        ClusterProcess.h ClusterProcess.cpp \
        ReadCluster.h ReadCluster.cpp \
        LRAlignment.h LRAlignment.cpp \
        LRCorrectionAlgorithm.h LRCorrectionAlgorithm.cpp \
        LRCorrectionProcess.h LRCorrectionProcess.cpp \
        StringThreader.h StringThreader.cpp \
        GraphCompare.h GraphCompare.cpp \
        HapgenProcess.h HapgenProcess.cpp \
        ExtensionDP.h ExtensionDP.cpp \
        VariationBubbleBuilder.h VariationBubbleBuilder.cpp \
        HaplotypeBuilder.h HaplotypeBuilder.cpp \
        GapFillProcess.h GapFillProcess.cpp \
        MetAssembleProcess.h MetAssembleProcess.cpp \
        MetagenomeBuilder.h MetagenomeBuilder.cpp \
        HapgenUtil.h HapgenUtil.cpp \
        BuilderCommon.h BuilderCommon.cpp \
        VCFTester.h VCFTester.cpp \
        DindelUtil.h DindelUtil.cpp \
        DindelRealignWindow.h DindelRealignWindow.cpp \
        DindelHMM.h DindelHMM.cpp \
        ReadCoherentHaplotypeBuilder.h ReadCoherentHaplotypeBuilder.cpp
