noinst_LIBRARIES = libbigraph.a

libbigraph_a_CPPFLAGS = \
	-I$(top_srcdir)/Util

libbigraph_a_SOURCES = \
                       Bigraph.h Bigraph.cpp \
                       Vertex.h Vertex.cpp  \
                       Edge.h Edge.cpp \
					   TransitiveGroup.h TransitiveGroup.cpp \
					   TransitiveGroupCollection.h TransitiveGroupCollection.cpp 
