noinst_LIBRARIES = libcompression.a

libcompression_a_CPPFLAGS = \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/Thirdparty 

libcompression_a_SOURCES = HuffmanTreeCodec.h \
						   HuffmanUtil.h HuffmanUtil.cpp \
						   PackedTableDecoder.h \
                           StreamEncoding.h \
						   HuffmanForest.h HuffmanForest.cpp
