noinst_LIBRARIES = libsta.a

libsta_a_CPPFLAGS = \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Stats

libsta_a_SOURCES = STA.cpp \
			  BWT.cpp BWT.h \
			  STCommon.cpp STCommon.h \
			  SuffixTree.cpp SuffixTree.h \
			  STGlobal.h \
			  Occurance.cpp Occurance.h \
			  SuffixArray.cpp SuffixArray.h \
			  InverseSuffixArray.cpp InverseSuffixArray.h \
			  ReadTable.cpp ReadTable.h
