noinst_LIBRARIES = libscaffold.a

libscaffold_a_CPPFLAGS = \
	-I$(top_srcdir)/Util \
    -I$(top_srcdir)/Thirdparty \
    -I$(top_srcdir)/Bigraph \
    -I$(top_srcdir)/SQG \
	-I$(top_srcdir)/Algorithm \
    -I$(top_srcdir)/StringGraph

libscaffold_a_SOURCES = ScaffoldVertex.h ScaffoldVertex.cpp \
                        ScaffoldEdge.h ScaffoldEdge.cpp \
                        ScaffoldGraph.h ScaffoldGraph.cpp \
                        ScaffoldVisitors.h ScaffoldVisitors.cpp \
                        ScaffoldLink.h ScaffoldLink.cpp \
                        ScaffoldRecord.h ScaffoldRecord.cpp \
						ScaffoldGroup.h ScaffoldGroup.cpp \
                        ScaffoldSearch.h ScaffoldSearch.cpp \
                        ScaffoldWalk.h ScaffoldWalk.cpp \
						ScaffoldAlgorithms.h ScaffoldAlgorithms.cpp \
						ScaffoldSequenceCollection.h ScaffoldSequenceCollection.cpp
