noinst_LIBRARIES = libstringgraph.a

libstringgraph_a_CPPFLAGS = \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/Algorithm

libstringgraph_a_SOURCES = \
        SGUtil.cpp SGUtil.h \
        SGAlgorithms.cpp SGAlgorithms.h \
		SGPairedAlgorithms.cpp SGPairedAlgorithms.h \
		SGDebugAlgorithms.cpp SGDebugAlgorithms.h

