noinst_LIBRARIES = libstringgraph.a

libstringgraph_a_CPPFLAGS = \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/Thirdparty \
	-I$(top_srcdir)/Algorithm \
	-I$(top_srcdir)/SQG

libstringgraph_a_SOURCES = \
        SGUtil.cpp SGUtil.h \
        SGAlgorithms.cpp SGAlgorithms.h \
		SGPairedAlgorithms.cpp SGPairedAlgorithms.h \
		SGDebugAlgorithms.cpp SGDebugAlgorithms.h

