noinst_LIBRARIES = libstringgraph.a

libstringgraph_a_CPPFLAGS = \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/Thirdparty \
	-I$(top_srcdir)/Algorithm \
	-I$(top_srcdir)/SQG

libstringgraph_a_SOURCES = \
        SGUtil.cpp SGUtil.h \
        SGAlgorithms.cpp SGAlgorithms.h \
        SGVisitors.h SGVisitors.cpp \
        CompleteOverlapSet.h CompleteOverlapSet.cpp \
        RemovalAlgorithm.h RemovalAlgorithm.cpp \
		SGSearch.h SGSearch.cpp \
		GraphSearchTree.h \
		SGWalk.h SGWalk.cpp

