noinst_LIBRARIES = libsuffixtools.a

libsuffixtools_a_CPPFLAGS = \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/Bigraph 

libsuffixtools_a_SOURCES = BWT.cpp BWT.h \
                           STCommon.cpp STCommon.h \
                           STGlobals.h \
                           Occurrence.cpp Occurrence.h \
                           SuffixArray.cpp SuffixArray.h \
                           SuffixCompare.cpp SuffixCompare.h \
                           InverseSuffixArray.cpp InverseSuffixArray.h \
                           LCPArray.cpp LCPArray.h \
                           saca.h saca.cpp \
                           BWTAlgorithms.h BWTAlgorithms.cpp \
                           OverlapQuality.h OverlapQuality.cpp \
                           AssembleExact.h AssembleExact.cpp \
                           SuffixTree.h SuffixTree.cpp \
                           BWTTraverse.h BWTTraverse.cpp \
						   OverlapBlock.h OverlapBlock.cpp \
						   OverlapAlgorithm.h OverlapAlgorithm.cpp \
						   OverlapSeed.h OverlapSeed.cpp
