noinst_LIBRARIES = libutil.a

libutil_a_CPPFLAGS = \
	-I$(top_srcdir)/Bigraph

libutil_a_SOURCES = \
        Util.cpp Util.h \
        Contig.h Contig.cpp \
        ReadTable.h ReadTable.cpp \
        SeqReader.h SeqReader.cpp \
        DNAString.h DNAString.cpp \
        Match.h Match.cpp \
        Pileup.h Pileup.cpp \
		BitChar.h BitChar.cpp \
		Interval.h Interval.cpp \
		SeqCoord.h SeqCoord.cpp
