noinst_LIBRARIES = libutil.a

libutil_a_CPPFLAGS = \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Thirdparty

libutil_a_SOURCES = \
        Util.h Util.cpp \
		Alphabet.h Alphabet.cpp \
        Contig.h Contig.cpp \
        ReadTable.h ReadTable.cpp \
        ReadInfoTable.h ReadInfoTable.cpp \
        SeqReader.h SeqReader.cpp \
        DNAString.h DNAString.cpp \
        Match.h Match.cpp \
        Pileup.h Pileup.cpp \
		BitChar.h BitChar.cpp \
		Interval.h Interval.cpp \
		SeqCoord.h SeqCoord.cpp \
		MultiOverlap.h MultiOverlap.cpp \
		QualityVector.h QualityVector.cpp \
		SGAStats.h SGAStats.cpp \
		Quality.h Quality.cpp \
		PrimerScreen.h PrimerScreen.cpp \
		BitVector.h BitVector.cpp \
        CorrectionThresholds.h CorrectionThresholds.cpp \
        KmerDistribution.h KmerDistribution.cpp \
        ClusterReader.h ClusterReader.cpp \
        MultiAlignment.h MultiAlignment.cpp \
		StdAlnTools.h StdAlnTools.cpp \
        VCFUtil.h VCFUtil.cpp \
        QualityTable.h QualityTable.cpp \
        BloomFilter.h BloomFilter.cpp \
        VariantIndex.h VariantIndex.cpp \
        Verbosity.h \
        Timer.h \
        EncodedString.h \
        DNACodec.h \
        DNADouble.h \
        BWT4Codec.h \
        BWTCodec.h \
        DNACodec.h \
        NoCodec.h \
        QualityCodec.h \
        SimpleAllocator.h \
        SimplePool.h \
        mkqs.h \
        bucketSort.h \
        HashMap.h \
        Profiler.h \
		Metrics.h

